--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,6 +5,19 @@ body,
     height: 100%;
 }
 
+ul,
+li {
+    list-style: none;
+}
+
+.clear:after {
+    content: '\20';
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
 .mt10 {
     margin-top: 10px;
 }
